# Guardian

./: .gitignore  Guardian.sln  GuardianLLM.csproj  NEW-guardian-alpaca.jsonl  Original-guardian-alpaca.jsonl  README.md  batch_id.txt  batch_id_2.txt  batch_requests.jsonl  batch_results_raw.jsonl  combined_training_data.jsonl  download_batch_results.py  generate_variations_batch.py  guardian_results_summary.md  normalize_training_data.py  normalized_training_data.jsonl  prepare_training_data.py  process_batch_results.py  process_external_datasets.py  pyproject.toml  requirements.txt  runpod_setup.sh  submit_batch.py  supplementary_training_data.jsonl  train_guardian_llm.py  transform_training_format.py
Docs/: AI_PERSONHOOD.md  DATASET_GENERATION.md  GUARDIAN_COMPLETE_STRATEGY.md  GUARDIAN_TRAINING_SESSION_RECAP.md  Guardian_POC_Test_Report.docx  JAY_LEE_DEMO_SCRIPT.md  NZ_CRISIS_RESOURCES_VERIFIED.md  RUNPOD_FINETUNING_GUIDE.md  SAFETY_AND_CRISIS_RESPONSE.md
Docs/Fine Tuning/: lfm-finetune-COMPLETE.jsonl
Docs/Qwen2.5-3b-Instruct_Scripts/: test_qwen.py  train_qwen.py
Docs/Qwen2.5-8b-Instruct_Scripts/: test_qwen.py  train_qwen.py
Docs/TheChat/: Degradation Chat.json  Disaster Chat.json  chat-LFM Disaster.txt
Fine Tuning/: 0-split-existing-dataset.bat  1-launch-prompt-editor.bat  2-build-dataset.bat  Convert to ggud and quantise.txt  README-Modular-System.md  README.md  RUNPOD_FINETUNING_GUIDE.md  RUNPOD_QUICKSTART.md  analyze-outputs.py  build-dataset.py  convert_for_finetuning.py  guardian-alpaca-built.jsonl  guardian-alpaca.jsonl  guardian-axolotl-config.yml  guardian-editor.html  instructions.jsonl  launch-editor.bat  outputs.jsonl  prompt-editor-enhanced.html  prompt-editor.html  prompts.jsonl  split-dataset.py  test_guardian_live.py  test_guardian_v1.py  test_guardian_v2.py  test_guardian_v2_small.py  train_guardian_standalone.py  train_guardian_standalone_small.py  training-data-final.jsonl  training-data-normalized.jsonl  training-data-v2.jsonl  training-data.jsonl
Properties/: launchSettings.json
data/: crisis_patterns.json  expanded_training_dataset.jsonl  known_fake_resources.json  nz_crisis_resources.json
examples/: basic_usage.py
guardian_llm/: README.md  __init__.py  __main__.py  cli.py  config.py  data.py  data_utils.py  evaluator.py  export.py  inference.py  model.py  regions.py  tools.py  trainer.py
guardian_llm/data/: batch_requests.jsonl  batch_results_raw.jsonl  batch_results_raw_2.jsonl  boundary_examples.jsonl  guardian-training-cleaned.jsonl  guardian-training-data.jsonl  guardian-training-final.jsonl  reddit-control.jsonl  training-data-final.jsonl  variations_parsed.jsonl
guardian_llm/scripts/: __init__.py  batch_download.py  batch_submit.py  fix_training_format.py  generate_variations.py  normalize.py  prepare_data.py  process_external.py  train.py
src/: __init__.py  guardian.py  hallucination_detector.py  pattern_detector.py
tests/: __init__.py  test_config.py  test_guardian.py  test_regions.py  test_tools.py
